# Nova

./: .dockerignore  .env.example  .env.metarepo  .env.metarepo.example  .gitignore  .pre-commit-config.yaml  .rgignore  .rignore  AGENTLAB_ONBOARDING.md  AGENTS.md  AGENT_EXECUTION_LOGGING.md  AGENT_MEMORY_PLAN.md  AGENT_MEMORY_TODO.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CLAUDE.md  CLOSED_LOOP_STATE_SUMMARY.md  CONCEPT_CAPTURE_PLAN.md  CONFIG_MIGRATION.md  CONTRIBUTING.md  CONTROL_PLANE_DESIGN.md  Dockerfile  Dockerfile.nova-service  Dockerfile.rex-harness  Dockerfile.rex-harness.v2  ENTITY_GRAPH_PANEL_SPEC.md  EVENT_STREAMING_SPEC.md  FORK_PATCH_SPEC.md  IMPLEMENTATION_COMPLETE.md  IPC.drawio  LICENSE  LOGGING_STRUCTURE.md  MULTI-SITE-AUTH-README.md  ORCHESTRATOR_STATE_ANALYSIS.md  PERMISSIONS_SPEC.md  PERMISSION_UI_FIX_SPEC.md  PLAN-internal-event-subscription.md  PLAN.md  PLAN_REFACTOR.md  (+111 more)
.claude/: settings.local.json
.config/: settings.json
.github/: dependabot.yml
.graphd/: graphd.db  graphd.db-shm
.lab/: experiment.yaml
.meta/: BOUNDARY_INTELLIGENCE_IMPLEMENTATION_SPEC.md.meta.json  WORKTREE_SPEC.MD.meta.json
agentlab/: agentlab.config.json  harness.js  harness.ts  package.json
app/: base_app.py  multi_process_app.py  single_process_app.py
apps/: dev.ts
architecture/: core-runtime-flow-drawio.mmd
bench/: questions.json  runs.json
benchmarks/: bench_agent.py  conftest.py
communication/: __init__.py  event_bus_protocol.py  events.py  in_memory_bus.py  multiprocess_bus.py
config/: app_config.json  audio_config.json  behavioral_rules.md  defaults.agentlab.experiment.no_entity_graph.json  defaults.agentlab.local.json  defaults.agentlab.sdkv2.json  defaults.json  harness_config.json  output_schemas.json  prompts_config.json  router_patterns_config.json  rules.md  service_rep_config.json  text_processor_config.json
contracts/: UNIFICATION.md  domain.yaml
control/: main.py
dashboard/: index.html  package.json  start-graphd.ts
data/: jimmy-observations.md
docker/: entrypoint.sh
docs/: AGENT_REFACTOR_SPEC.md  AI-ANALYSIS.md  COCKPIT_MESSAGE_DURABILITY_PATCH_SPEC.md  EVAL_SYSTEM_FIXES.md  ID_GENERATION.md  LINT-AUDIT.md  MULTITURN_EVAL_SYSTEM.md  PER_STEP_STATE.md  PLAN_context_window_analysis.md  PLAN_context_window_refactor.md  PRODUCTION_READINESS_SPEC.md  PUSH_TO_TALK.md  README.md  RECONSTRUCTION_COMPLETE.md  REFACTOR_IMPLEMENTATION.md  RL_DATA_FLOW.md  RL_LOGGING_GUIDE.md  RL_RECONSTRUCTION_AUDIT.md  RL_SYSTEM_SUMMARY.md  RL_WORKER_SETUP.md  SPEC.md  TEST-HEALTH-SPEC.md  TEST-SKEPTIC-BOUNDARY-SPEC.md  agent-factory-architecture.md  agent-model-config-cleanup.md  agentic-tasks-patch-spec.md  architect-feature-proposal.md  ast-merkle-dag-architecture.md  async-hooks.md  async-mode-audit.md  auth-system-implementation.md  batch-edit-patch-spec.md  bridge-client-memory-leak-fix.md  bridge-gateway-refactoring-plan.md  bridge-improvement-plan.md  bridge-improvements-quick-reference.md  bridge-improvements-summary.md  bun-threading-model.md  code-improvements.md  compaction-engine-implementation-plan.md  (+75 more)
evals/: AGENT_CONFIG_GUIDE.md  README.md  __init__.py  eval_runner.py  grading.py  isolation.py  judge_loader.py  visualization.py
future-memory/: context-experiments.md
harness/: __init__.py  agent.py  agent_execution_logger.py  agent_worker.py  config.py  event_bus.py  harness.py  llm_adapter.py  logger.py  planner.py  process_manager.py  rl_reconstructor.py  rl_worker.py  router.py  runtime.py  service_rep.py  tool_registry.py  tts_worker.py
logs/: agent_execution.jsonl  harness_debug.jsonl  harness_structured.jsonl  health.jsonl  prompts.jsonl  requests.jsonl  speech.logs  working_car_example.jsonl
recipes/: package.json
sandbox/: interview.sb  interview.sh
scripts/: README_GRAPHD.md  build-release.ts  check-valentine-reservations.sh  check-valentine-reservations.ts  compare_runs.py  example_rl_integration.py  graphd_examples.py  health-check.ts  install.ps1  install.sh  monitor-resy-cancellations.sh  multi-site-auth-stealth.sh  multi-site-auth-usage.sh  pr-review-ci.ts  profile_memory.py  prompt-protocol-demo.mjs  query_graphd.py  quick-check-valentine.sh  quick-fixes.ts  regenerate.sh  run-bench-experiment.sh  run_eval.py  run_preferences.ts  schema-cli.ts  send_image_telegram.js  setup-pr-review-webhooks.sh  setup-resy-notifications.sh  setup_env.sh  smoke-tool-calls.mjs  sql-cli.ts  start_graphd.py  sync-api-cli.ts  test-distribution.sh  test-knn.sql  test-similarity.sql  test-vector-explain.sql  test_docker.sh  validate.js  verify_rl_worker.py  watchdog.ts
services/: __init__.py  audio_service.py  text_linter_service.py
sias-kernel/: agents.ts  benchmark.ts  checkpoint.ts  config.ts  context.ts  flipflop.ts  health.ts  loop.ts  session.ts  sias-bug-fixes.md  sias-kernel.ts  types.ts  upgrade.ts  validators.ts  worktree.ts
specs/: skills_hooks_spec.md  wizard-reflection-spec.md
src/: app_config.py
tests/: README.md  __init__.py  adapter-routing.test.ts  conftest.py  context-compact.test.ts  orchestrator-workqueue.test.ts  pause-resume-flow.test.ts  run_tests.py  test_agent.py  test_agent_execution_logging.py  test_cli.py  test_code_review_hooks.py  test_config_loading.py  test_directory_context.py  test_error.py  test_error_recovery.py  test_event_bus.py  test_filesystem_context.py  test_fixed.py  test_graphd_integration.py  test_graphd_sanity.py  test_harness_integration.py  test_helpers.py  test_judge_loader.py  test_planner.py  test_reconstruction.py  test_resilience.py  test_rl_logging.py  test_router.py  test_simple_tui.py  test_skills_hooks.py  test_step_context.py  test_step_execution.py  test_tool_registry.py  test_tui_user_flows.py  test_unique_ids.py  test_wizard_behavior.py  test_wizard_e2e.py  test_wizard_integration.py  test_wizard_real_e2e.py  (+5 more)
tui/: README.md  TUI_USAGE.md  __init__.py  assistant_status.txt  (+15 more)
tui-ts/: agent_client.ts  bridge.py  bridge_client.ts  buffer.ts  client.ts  commands.ts  file_cache.ts  index.tsx  logger.ts  package.json  store.ts  tsconfig.json  types.ts
(+1063 files in other folders)
