[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
version = "0.1.0"
description = "Multi-process voice agent with harness, RL worker, and Web UI"
readme = "README.md"
license = { text = "UNLICENSED" }
requires-python = ">=3.9"
authors = [
  { name = "Voice Agent Team" }
]
keywords = ["voice", "agent", "multi-process", "speech", "ai"]
dependencies = [
  # LLM Backends
  "anthropic>=0.20.0",
  "openai>=1.0.0",
  # Web/HTTP
  "aiohttp>=3.9.0",
  "beautifulsoup4>=4.12.0",
  "html2text>=2020.1.16",
  "httpx==0.27.2",
  "requests>=2.28.0",
  # Data/Visualization
  "matplotlib>=3.7.0",
  "numpy<=2.2.6",
  "scipy<=1.16.0",
  "seaborn>=0.12.0",
  # Utilities
  "pytz>=2023.3",
  "typing_extensions==4.14.0",
]

[project.optional-dependencies]
dev = [
  "black==24.10.0",
  "isort==5.13.2",
  "mypy==1.11.2",
  "pip-tools==7.4.1",
  "pre-commit==3.8.0",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-randomly==3.15.0",
  "pytest-timeout==2.3.1",
  "pytest-watch==4.2.0",
  "pytest-xdist==3.6.1",
  "ruff==0.7.3",
  "unittest-mock==1.4.0"
]

audio = [
  # Audio I/O
  "PyAudio==0.2.14",
  "pydub==0.25.1",
  "webrtcvad==2.0.10",
  # Speech Recognition
  "SpeechRecognition==3.14.3",
  "faster-whisper>=1.0.0",
  # Text-to-Speech (pyttsx3 pulls pyobjc on macOS)
  "pyttsx3>=2.90",
]

[project.scripts]
voice-agent = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app_config"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["config/*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "B", "W", "I",
  "UP", "N", "S", "RUF", "ASYNC", "PL"
]
ignore = [
  "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
