[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
version = "0.1.0"
description = "Multi-process voice agent with harness, RL worker, and Web UI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Voice Agent Team" }
]
keywords = ["voice", "agent", "multi-process", "speech", "ai", "llm", "whisper"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Typing :: Typed",
]
dependencies = [
  # LLM Backends
  "anthropic>=0.20.0,<1.0.0",
  "openai>=1.0.0,<2.0.0",
  # Web/HTTP
  "aiohttp>=3.9.0,<4.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "html2text>=2020.1.16,<2025.0.0",
  "httpx>=0.27.0,<1.0.0",
  "requests>=2.28.0,<3.0.0",
  # Data/Visualization
  "matplotlib>=3.7.0,<4.0.0",
  "numpy>=1.24.0,<2.3.0",
  "scipy>=1.10.0,<2.0.0",
  "seaborn>=0.12.0,<1.0.0",
  # Utilities
  "pytz>=2023.3",
  "typing_extensions>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0,<25.0.0",
  "isort>=5.13.0,<6.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pip-tools>=7.4.0,<8.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-randomly>=3.15.0,<4.0.0",
  "pytest-timeout>=2.3.0,<3.0.0",
  "pytest-xdist>=3.6.0,<4.0.0",
  "ruff>=0.7.0,<1.0.0",
  "vulture>=2.0.0,<3.0.0",
  "bandit>=1.7.0,<2.0.0",
  "pip-audit>=2.0.0,<3.0.0",
]

audio = [
  # Audio I/O
  "PyAudio>=0.2.14,<0.3.0",
  "pydub>=0.25.0,<1.0.0",
  "webrtcvad>=2.0.10,<3.0.0",
  # Speech Recognition
  "SpeechRecognition>=3.10.0,<4.0.0",
  "faster-whisper>=1.0.0,<2.0.0",
  # Text-to-Speech (pyttsx3 pulls pyobjc on macOS)
  "pyttsx3>=2.90,<3.0.0",
]

# Combined extras for convenience
all = [
  "rex[dev]",
  "rex[audio]",
]

[project.scripts]
voice-agent = "app.cli:main"

[project.urls]
Homepage = "https://github.com/nishiokj/rex"
Documentation = "https://github.com/nishiokj/rex#readme"
Repository = "https://github.com/nishiokj/rex.git"
Issues = "https://github.com/nishiokj/rex/issues"
Changelog = "https://github.com/nishiokj/rex/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app_config"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["config/*.json"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "B", "W", "I",
  "UP", "N", "S", "RUF", "ASYNC", "PL"
]
ignore = [
  "E501"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
